...
    <string name="artist">Artist</string>
    <string name="albumName">Album Name</string>
    <string name="company">Company</string>
    <string name="appreciation">Appreciation</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cleanImage">Clean Image</string>
    <string name="Switch" translatable="false">Switch</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
...
